k8s-java/java-deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: java-spingboot
spec:
  replicas: 1
  selector:
    matchLabels:
      app: java-spingboot
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: java-spingboot
    spec:
      containers:
        - name: java-spingboot
          imagePullPolicy: Always
          image: registry.s-one.finance/vnpt-dx-app-service:latest
          ports:
          - containerPort: 80
            name: http
            protocol: TCP
          resources:
            limits:
              cpu: 500m
              memory: 500M
            requests:
              cpu: 100m
              memory: 100M
      imagePullSecrets:
        - name: secret
