k8s-java/java-service.yml
apiVersion: v1
kind: Service
metadata:
  name: java-spingboot-svc
  labels:
    app: java-spingboot-svc
spec:
  type: NodePort
  ports:
   - port: 80
     targetPort: 27017
     protocol: TCP
  selector:
   app: java-spingboot
