k8s-java/java-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-nginx
  annotations:
    # use the shared ingress-nginx
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/secure-backends: "true"
    nginx.ingress.kubernetes.io/affinity: "cookie"

spec:
spec:
  rules:
  - host: java.domain.example
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: java-spingboot-svc
            port:
              number: 80
